[DOR-1303] Add cmake helper to convert SBOMs to a licence header
This way we can embed the licences into the executable and print them
out in the same way that we do the version info.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,6 +90,7 @@ include(cmake/DownloadAndExtract.cmake)
 include(cmake/SharedLibHelpers.cmake)
 include(cmake/DoradoTarget.cmake)
 include(cmake/DoradoCheckDeps.cmake)
+include(cmake/DoradoLicences.cmake)
 
 # Add sanitizer options to compilation flags
 include(cmake/ECMEnableSanitizers.cmake)
