[DOR-1478] Updated Kadayashi to the latest master version, commit e8c002e07.

--- a/dorado/3rdparty/kadayashi/CMakeLists.txt
+++ b/dorado/3rdparty/kadayashi/CMakeLists.txt
@@ -4,9 +4,27 @@ project(kadayashi CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+
+
+option(BUILD_KADAYASHI_ENABLE_COVERAGE "Build tests with gcov coverage" OFF)
 option(BUILD_KADAYASHI_TESTS "Build the kadayashi unit test executable" ON)
 option(BUILD_KADAYASHI_EXE "Build the kadayashi executable" ON)
 option(BUILD_KADAYASHI_AS_SUBPROJECT "If ON, custom compiler options will not be set" OFF)
+
+# Helper: enable gcov only for selected targets
+function(enable_gcov target)
+  if(BUILD_KADAYASHI_ENABLE_COVERAGE AND CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+    target_compile_options(${target} PRIVATE -O0 -g -fprofile-arcs -ftest-coverage --coverage)
+    target_link_options(${target} PRIVATE -lgcov --coverage)
+  endif()
+endfunction()
+
+# Helper: -Wall
+function(enable_wall target)
+  if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+    target_compile_options(${target} PRIVATE -Wall)
+  endif()
+endfunction()
 
 # If no prefix is provided we install next to the binary directory.
 if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
@@ -32,18 +50,31 @@ find_package(ZLIB REQUIRED)
 add_library(haplotag_lib STATIC
     src/haplotag_lib/local_haplotagging.cpp
     src/haplotag_lib/hts_types.cpp
+    src/haplotag_lib/blocked_bloom_filter.cpp
+    src/haplotag_lib/faidx_utils.cpp
+    src/haplotag_lib/sequence_utility.cpp
+    src/haplotag_lib/variant_graph.cpp
+    src/haplotag_lib/bam_record_parsing.cpp
+    include/bam_file_view.h
     include/local_haplotagging.h
+    include/faidx_utils.h
     include/hts_types.h
     include/types.h
+    include/blocked_bloom_filter.h
 )
+
 
 set_target_properties(haplotag_lib PROPERTIES LINKER_LANGUAGE CXX)
 
 add_library(kadayashi::haplotag_lib ALIAS haplotag_lib)
 
-target_include_directories(haplotag_lib PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+target_include_directories(haplotag_lib
+    PUBLIC
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src/hts_utils>
+        $<INSTALL_INTERFACE:include>
+    PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/src/haplotag_lib
 )
 
 target_link_libraries(haplotag_lib
@@ -51,6 +82,8 @@ target_link_libraries(haplotag_lib
         ${HTSLIB_LIBRARIES}
         ${ZLIB_LIBRARIES}
 )
+enable_gcov(haplotag_lib)
+enable_wall(haplotag_lib)
 
 # Optional install
 install(TARGETS haplotag_lib EXPORT kadayashi_targets
@@ -83,6 +116,11 @@ if (BUILD_KADAYASHI_EXE OR BUILD_KADAYASHI_TESTS)
             src/hts_utils/BamFile.cpp
             src/hts_utils/FastxRandomReader.cpp
     )
+    target_include_directories(kadayashi_main_lib
+        PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/src/haplotag_lib
+        ${CMAKE_CURRENT_SOURCE_DIR}/src/hts_utils
+    )
     target_link_libraries(kadayashi_main_lib
         PRIVATE
             haplotag_lib
@@ -90,6 +128,8 @@ if (BUILD_KADAYASHI_EXE OR BUILD_KADAYASHI_TESTS)
             ${HTSLIB_LIBRARIES}
             ${ZLIB_LIBRARIES}
     )
+    enable_gcov(kadayashi_main_lib)
+    enable_wall(kadayashi_main_lib)
 endif()
 ###########################################
 
@@ -114,6 +154,8 @@ if (BUILD_KADAYASHI_EXE)
             ${HTSLIB_LIBRARIES}
             ${ZLIB_LIBRARIES}
     )
+    enable_gcov(kadayashi)
+    enable_wall(kadayashi)
 
     install(TARGETS kadayashi DESTINATION bin)
 
