DOR-1201: Encapsulate read initialisation

--- a/dorado/hts_writer/CMakeLists.txt
+++ b/dorado/hts_writer/CMakeLists.txt
@@ -12,6 +12,7 @@ dorado_add_library(
         SummaryFileWriter.h
         interface.h
     SOURCES_PRIVATE
+        hts_writer_utils.h
         HtsFileWriter.cpp
         HtsFileWriterBuilder.cpp
         StreamHtsFileWriter.cpp
