[DOR-1457] Implemented a feature to load candidate variant sites and split samples around candidate positions to avoid running inference in other confident regions.

--- a/dorado/polish/CMakeLists.txt
+++ b/dorado/polish/CMakeLists.txt
@@ -14,6 +14,7 @@ dorado_add_library(
         cxxpool
         dorado_hts_utils
         dorado_torch_utils
+        intervaltree
         htslib
         spdlog::spdlog
 )
