--- a/dorado/cli/cli_lib/CMakeLists.txt
+++ b/dorado/cli/cli_lib/CMakeLists.txt
@@ -52,6 +52,7 @@ dorado_add_library(
         dorado_model_resolver_lib
         dorado_models_lib
         dorado_polish
+        intervaltree
         indicators
         minimap2
 )
