--- a/dorado/cli/cli_lib/CMakeLists.txt
+++ b/dorado/cli/cli_lib/CMakeLists.txt
@@ -30,6 +30,7 @@ dorado_add_library(
         read_output_progress_stats.cpp
         read_output_progress_stats.h
         SimpleProgressBar.h
+        summary_info.h
         summary.cpp
         trim.cpp
         variant_progress_tracker.cpp
