--- a/dorado/secondary/common/CMakeLists.txt
+++ b/dorado/secondary/common/CMakeLists.txt
@@ -1,33 +1,25 @@
-dorado_add_library(
-    NAME
-        dorado_secondary_common
-    PUBLIC_DIR
-        secondary/common
-    SOURCES_PUBLIC
-        bam_file.h
-        bam_info.h
-        batching.h
-        interval.h
-        region.h
-        stats.h
-        variant.h
-        vcf_writer.h
-    SOURCES_PRIVATE
+set(PUBLIC_BASE ${CMAKE_CURRENT_SOURCE_DIR}/include/secondary/common)
+
+target_sources(dorado_secondary
+    PUBLIC
+        ${PUBLIC_BASE}/bam_file.h
+        ${PUBLIC_BASE}/bam_info.h
+        ${PUBLIC_BASE}/batching.h
+        ${PUBLIC_BASE}/interval.h
+        ${PUBLIC_BASE}/region.h
+        ${PUBLIC_BASE}/stats.h
+        ${PUBLIC_BASE}/variant.h
+        ${PUBLIC_BASE}/vcf_writer.h
+    PRIVATE
         bam_file.cpp
         bam_info.cpp
         batching.cpp
         region.cpp
         variant.cpp
         vcf_writer.cpp
-    DEPENDS_PUBLIC
-        dorado_hts_utils
-        dorado_torch_utils
-        dorado_utils
-    DEPENDS_PRIVATE
-        cxxpool
-        dorado_version
-        htslib
-        intervaltree
-        kadayashi::haplotag_lib
-        spdlog::spdlog
+)
+
+target_include_directories(dorado_secondary
+    PUBLIC
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
