--- a/dorado/secondary/consensus/CMakeLists.txt
+++ b/dorado/secondary/consensus/CMakeLists.txt
@@ -1,18 +1,16 @@
-dorado_add_library(
-    NAME
-        dorado_secondary_consensus
-    PUBLIC_DIR
-        secondary/consensus
-    SOURCES_PUBLIC
-        consensus_result.h
-        consensus_utils.h
-        sample.h
-        sample_collate_utils.h
-        sample_trimming.h
-        variant_calling_sample.h
-        variant_calling.h
-        window.h
-    SOURCES_PRIVATE
+set(PUBLIC_BASE ${CMAKE_CURRENT_SOURCE_DIR}/include/secondary/consensus)
+
+target_sources(dorado_secondary
+    PUBLIC
+        ${PUBLIC_BASE}/consensus_result.h
+        ${PUBLIC_BASE}/consensus_utils.h
+        ${PUBLIC_BASE}/sample.h
+        ${PUBLIC_BASE}/sample_collate_utils.h
+        ${PUBLIC_BASE}/sample_trimming.h
+        ${PUBLIC_BASE}/variant_calling_sample.h
+        ${PUBLIC_BASE}/variant_calling.h
+        ${PUBLIC_BASE}/window.h
+    PRIVATE
         consensus_utils.cpp
         sample.cpp
         sample_collate_utils.cpp
@@ -20,13 +18,9 @@ dorado_add_library(
         variant_calling_sample.cpp
         variant_calling.cpp
         window.cpp
-    DEPENDS_PUBLIC
-        dorado_hts_utils
-        dorado_secondary_common
-        dorado_secondary_features
-        dorado_torch_utils
-        dorado_utils
-    DEPENDS_PRIVATE
-        cxxpool
-        spdlog::spdlog
+)
+
+target_include_directories(dorado_secondary
+    PUBLIC
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
