DOR-1464: Test caching dependencies for builds

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ regression_test/output
 *.t.err
 Makefile
 /models
+/dorado-dependencies
 
 # Ignore test output directories
 /tests/test_simple_basecaller_output_[0-9]*/
