--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -124,7 +124,7 @@ variables:
   - !reference [.set_parallel_jobs]
   - !reference [.setup_ccache]
   - echo "BUILD_OPTIONS '${BUILD_OPTIONS}'"
-  - eval cmake ${BUILD_OPTIONS} -S . -B ${BUILD_DIR} -D CMAKE_BUILD_TYPE=${BUILD_TYPE} -D DORADO_ENABLE_BENCHMARK_TESTS=ON
+  - eval cmake ${BUILD_OPTIONS} -S . -B ${BUILD_DIR} -D CMAKE_BUILD_TYPE=${BUILD_TYPE} -D DORADO_ENABLE_BENCHMARK_TESTS=ON -DDORADO_3RD_PARTY_DOWNLOAD=dorado-dependencies
   - cmake --build ${BUILD_DIR} --config ${BUILD_TYPE} --target ${BUILD_TARGET} -j ${PARALLEL_JOBS}
 
 .run_dorado_cmake_ctest:
@@ -187,6 +187,10 @@ variables:
       - dist
       - tests.archive
     expire_in: 1 day
+  cache:
+    key: dorado-dependencies-$CI_JOB_NAME_SLUG
+    paths:
+      - dorado-dependencies
 
 .build_dorado_archive:
   stage: build
@@ -197,6 +201,10 @@ variables:
     paths:
       - archive
     expire_in: 1 day
+  cache:
+    key: dorado-dependencies-$CI_JOB_NAME_SLUG
+    paths:
+      - dorado-dependencies    
 
 .sign_dorado:macos:
   script:
@@ -316,6 +324,10 @@ build:linux:x86:coverage:
       coverage_report:
         coverage_format: cobertura
         path: build/dorado_test_coverage.xml
+  cache:
+    key: dorado-dependencies-$CI_JOB_NAME_SLUG
+    paths:
+      - dorado-dependencies
 
 build:linux:x86:clang_tidy:
   stage: build
@@ -329,6 +341,10 @@ build:linux:x86:clang_tidy:
     - !reference [.set_parallel_jobs]
     - ./.gitlab/run_clang_tidy.sh -j ${PARALLEL_JOBS}
   artifacts: null
+  cache:
+    key: dorado-dependencies-$CI_JOB_NAME_SLUG
+    paths:
+      - dorado-dependencies
 
 .build:linux:x86:valgrind:
   stage: build
@@ -360,6 +376,10 @@ build:linux:x86:clang_tidy:
     # Run the ordinary tests directly under valgrind.
     # We don't use `ctest -VV -E smoke -T memcheck` since that requires additional setup.
     - ${valgrind} --error-exitcode=1 --track-origins=yes -- ./${BUILD_DIR}/tests/dorado_tests
+  cache:
+    key: dorado-dependencies-$CI_JOB_NAME_SLUG
+    paths:
+      - dorado-dependencies
 
 build:linux:arm64:jammy:
   image: ${DORADO_DOCKER_ROOT}/dorado-l4t-r36.4.0:1.0
