DOR-1484: add html output to existing gcovr output which was only creating cobertura xml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -320,6 +320,7 @@ build:linux:x86:coverage:
   artifacts:
     paths: 
       - build/dorado_test_coverage.xml
+      - build/dorado_test_coverage/
     reports:
       coverage_report:
         coverage_format: cobertura
