[DOR-1474] Implemented the ModelVariantPerceiver architecture for variant calling.

--- a/dorado/secondary/CMakeLists.txt
+++ b/dorado/secondary/CMakeLists.txt
@@ -12,6 +12,7 @@ dorado_add_library(
         dorado_utils
     DEPENDS_PRIVATE
         cxxpool
+        dorado_nn
         dorado_version
         htslib
         intervaltree
