[INSTX-13050] Add missing toml11 patch
I had the submodule modified locally but forgot to commit the patch.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "dorado/3rdparty/toml11"]
 	path = dorado/3rdparty/toml11
 	url = https://github.com/ToruNiina/toml11.git
+	ignore = dirty
 [submodule "dorado/3rdparty/cpp-httplib"]
 	path = dorado/3rdparty/cpp-httplib
 	url = https://github.com/yhirose/cpp-httplib.git
