[INSTX-13065] Exclude cli files from coverage
These aren't tested by the unit tests so we shouldn't be including them
in the coverage reports.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,6 +117,7 @@ if (GENERATE_TEST_COVERAGE)
             EXCLUDE
                 "${DORADO_3RD_PARTY_SOURCE}/*"
                 "${DORADO_3RD_PARTY_DOWNLOAD}/*"
+                "${PROJECT_SOURCE_DIR}/dorado/cli/*"
                 "${PROJECT_SOURCE_DIR}/tests/*"
                 "${CMAKE_BINARY_DIR}/3rdparty/*"
         )
