DOR-1509: only compute SQ M5 and UR tags when given FASTX(.gz) references - guard against using --emit-cram and a mmi index during start-up

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ Makefile
 
 # Ignore test output directories
 /tests/test_simple_basecaller_output_[0-9]*/
+/tests/data/aligner_test/*.fai
 
 # If running regression tests, the regression_test_data project is downloaded into
 # the dorado folder. We don't want it to be accidentally committed.
