Revert "[INSTX-13129] Replace utils::jthread with std::jthread"
This reverts commit 3e22f4a0f7a6257f3e23c9b937a1257c7012542a.

Our CI macOS builds don't support jthread yet.

--- a/dorado/utils/CMakeLists.txt
+++ b/dorado/utils/CMakeLists.txt
@@ -24,6 +24,7 @@ dorado_add_library(
         FixedSizeQueue.h
         fs_utils.h
         io_utils.h
+        jthread.h
         locale_utils.h
         log_utils.h
         math_utils.h
